add unit testing

--- a/littlelemon/restaurant/templates/book.html
+++ b/littlelemon/restaurant/templates/book.html
@@ -18,7 +18,7 @@
             </p>
             <p>
             <!-- Step 9: Part one -->
-            <label for="reservation_date">Name:</label>
+            <label for="reservation_date">Date:</label>
             <input type="Date" placeholder="" required="" id="reservation_date">
             </p>
       
